# Self_Driving_Stack

./: .flake8  .gitignore  CONTRIBUTING.md  DEVELOPMENT_SUMMARY.md  DIRECT_WIRING_GUIDE.md  HARDWARE_COMPATIBILITY_SUMMARY.md  PI_SETUP_CHECKLIST.md  PI_SETUP_COMMAND_SHEET.md  PI_SETUP_GUIDE.md  PI_SETUP_QUICK_REFERENCE.md  QUICK_START.md  README.md  README_SW.md  ROADMAP.md  ROBOTAXI_AUTONOMY_ANALYSIS.md  WAVESHARE_ANALYSIS.md  WIRING_GUIDE.md  app_direct_control.py  check_status.sh  direct_motor_control.py  package-lock.json  package.json  robotaxi.service  robotaxi_enhanced.py  robotaxi_simple.py  setup_direct_control.sh  setup_pi_robotaxi.sh  setup_robotaxi.sh  setup_robotaxi_simple.sh  start_robotaxi.sh  test_environment.py  test_local_setup.py  test_robotaxi_local.py  test_waveshare_hardware.py  transfer_to_pi.sh
ros2_ws/src/waveshare_navigation/: goal_follower_node.py  package.xml  rules_of_road_node.py  setup.py  teleop_socketio_node.py  wander_node.py
ros2_ws/src/waveshare_navigation/config/: nav2_params.yaml
ros2_ws/src/waveshare_navigation/launch/: nav2_bringup.launch.py  path_sequencer.launch.py  telemetry.launch.py
ros2_ws/src/waveshare_navigation/waveshare_navigation/: arbiter_node.py  path_sequencer_node.py  route_receiver_node.py  rules_of_road_node.py  setup.py  telemetry_sender_node.py
ros2_ws/src/waveshare_perception/: __init__.py  cam_socketio_bridge.py  lane_segmentation_node.py  package.xml  semantic_seg_node.py  setup.py  yolo_sign_node.py
ros2_ws/src/waveshare_perception/waveshare_perception/: object_detection_node.py  setup.py  (+2 more)
(+66 files in other folders)
