<package format="3">
  <name>waveshare_navigation</name>
  <version>0.0.0</version>
  <description>Navigation behaviours for Waveshare Robotaxi</description>
  <maintainer email="robotaxi@example.com">robotaxi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package> 