<package format="3">
  <name>waveshare_perception</name>
  <version>0.0.0</version>
  <description>Perception nodes (YOLO sign & traffic-light detection, lane segmentation) for Robotaxi</description>
  <maintainer email="robotaxi@example.com">robotaxi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package> 